<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_angle_left"
                app:title="@string/title_about"
                app:titleTextAppearance="@style/ToolbarTitle"/>
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/text_default"
                android:src="@drawable/ic_rosm" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/app_name"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/version"
                android:textSize="14sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_update"
                style="@style/CardViewTheme"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="32dp"
                    android:gravity="center"
                    android:text="@string/title_update"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="15sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_3rd"
                style="@style/CardViewTheme"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="32dp"
                    android:gravity="center"
                    android:text="@string/title_open3rd"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="15sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_other"
                style="@style/CardViewTheme"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="32dp"
                    android:gravity="center"
                    android:text="@string/title_other"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="15sp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>