<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_angle_left"
            app:title="@string/title_skland_setting"
            app:titleTextAppearance="@style/ToolbarTitle"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_bind_role"
                    style="@style/CardViewTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_gravity="start|center"
                        android:text="@string/button_bind_role"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/text_binding_role"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="15dp"
                        android:layout_gravity="end|center"
                        android:text="@string/text_default"
                        android:textSize="13sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_skland_login_web"
                    style="@style/CardViewTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="15dp"
                        android:layout_gravity="start|center"
                        android:text="@string/button_web_login"
                        android:textColor="@color/blue_500"
                        android:textSize="15sp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_skland_logout"
                    style="@style/CardViewTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="15dp"
                        android:layout_gravity="start|center"
                        android:text="@string/button_logout"
                        android:textColor="@color/red"
                        android:textSize="15sp" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>