<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                style="@style/CardViewTheme"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:clickable="false"
                android:contextClickable="false">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:layout_marginStart="20dp"
                    android:text="@string/bar_tools"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_cal"
                style="@style/CardViewTheme"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="20dp"
                    android:drawablePadding="10dp"
                    android:text="@string/title_cal"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="15sp"
                    app:drawableLeftCompat="@drawable/ic_calculator" />
                <TextView
                    android:id="@+id/text_cal_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:layout_marginEnd="20dp"
                    android:text="@string/text_default"
                    android:textSize="13sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_skland"
                style="@style/CardViewTheme"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="20dp"
                    android:drawablePadding="10dp"
                    android:text="@string/title_skland"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="15sp"
                    app:drawableLeftCompat="@drawable/ic_hands_holding_diamond" />

                <TextView
                    android:id="@+id/text_userInfo_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:layout_marginEnd="20dp"
                    android:text="@string/text_default"
                    android:textSize="13sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardViewTheme"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:clickable="false"
                android:focusable="false">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:layout_marginStart="20dp"
                    android:text="@string/title_setting"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <!--                <ImageView-->
                <!--                    android:id="@+id/menu_link"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_gravity="end|bottom"-->
                <!--                    android:layout_marginEnd="20dp"-->
                <!--                    android:contentDescription="@string/text_link"-->
                <!--                    app:srcCompat="@drawable/ic_menu_dots" />-->

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_setting"
                style="@style/CardViewTheme"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="20dp"
                    android:drawablePadding="10dp"
                    android:text="@string/title_setting"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="15sp"
                    app:drawableLeftCompat="@drawable/ic_settings" />
            </androidx.cardview.widget.CardView>
            <!--            <androidx.cardview.widget.CardView-->
            <!--                style="@style/CardViewTheme"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:clickable="false"-->
            <!--                android:focusable="false"-->
            <!--                >-->

            <!--                <LinearLayout-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_gravity="center"-->
            <!--                    android:layout_marginStart="32dp"-->
            <!--                    android:layout_marginEnd="32dp"-->
            <!--                    android:orientation="horizontal">-->

            <!--                    <TextView-->
            <!--                        android:id="@+id/textview_link"-->
            <!--                        android:layout_width="wrap_content"-->
            <!--                        android:layout_height="match_parent"-->
            <!--                        android:gravity="start|center"-->
            <!--                        android:text="@string/text_link"-->
            <!--                        android:textColor="?attr/colorOnPrimary"-->
            <!--                        android:textSize="15sp" />-->

            <!--                </LinearLayout>-->
            <!--            </androidx.cardview.widget.CardView>-->

            <androidx.cardview.widget.CardView
                style="@style/CardViewTheme"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:clickable="false"
                android:focusable="false">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:layout_marginStart="20dp"
                    android:text="@string/bar_other"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_use"
                style="@style/CardViewTheme"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="20dp"
                    android:drawablePadding="10dp"
                    android:text="@string/title_use"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="15sp"
                    app:drawableLeftCompat="@drawable/ic_book_bookmark" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_question"
                style="@style/CardViewTheme"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="20dp"
                    android:drawablePadding="10dp"
                    android:text="@string/title_question"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="15sp"
                    app:drawableLeftCompat="@drawable/ic_interrogation" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_about"
                style="@style/CardViewTheme"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="20dp"
                    android:drawablePadding="10dp"
                    android:text="@string/title_about"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="15sp"
                    app:drawableLeftCompat="@drawable/ic_info" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/textView_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>